--- a/todolist.html
+++ b/todolist.html
@@ -14,6 +14,9 @@
   <div id="toDo-app" class="header">
     <h2>Mi lista de Tareas</h2>
     <input type="text" id="toDo-input" placeholder="Ingresar una nueva tarea: ">
+    <label for="prioridad-input">Nivel de prioridad</label>
+      <input type="number" id="prioridad-input" name="Prioridad" min="1" max="5" placeholder="Ingrese el nivel de prioridad" required>
+    </select>
     <span onclick="nuevoItem()" class="addBtn">Agregar</span>
   </div>
 
