--- a/todolist.html
+++ b/todolist.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Lista de Tareas Moderna</title>
+  <title>Lista de Tareas Administrativas</title>
   <link rel="stylesheet" href="todolist.css" />
   <script defer src="todolist.js"></script>
 </head>
